# garage-sensor

./: Cargo.toml  build.rs
.cargo/: config.toml
src/: led.rs  lib.rs  main.rs
src/board/: esp32c6.rs
