[package]
name = "garage-sensor"
version = "0.1.0"
edition = "2021"

[features]
default = ["esp32c6", "defmt"]
esp32c6 = [
    "dep:esp-hal",
    "dep:esp-backtrace",
    "dep:esp-hal-embassy",
    "dep:esp-wifi",
    "dep:esp-alloc",
    "esp-backtrace/esp32c6",
    "esp-hal/esp32c6",
    "esp-hal-embassy/esp32c6",
    "esp-wifi/esp32c6",
    "dep:fugit",
]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "mcutie/defmt",
    "esp-hal/defmt",
    "esp-backtrace/defmt",
    "embassy-net/defmt",
    "embassy-executor/defmt",
    "esp-hal-embassy/defmt",
    "esp-wifi/defmt",
]

[dependencies]
esp-backtrace = { version = "0.14.2", optional = true, features = [
    "exception-handler",
    "panic-handler",
] }
esp-hal = { version = "0.22.0", optional = true, features = ["unstable"] }
defmt = { version = "0.3.10", optional = true }
defmt-rtt = { version = "0.4.1", optional = true }
embassy-executor = { version = "0.6.3", features = ["task-arena-size-81920"] }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.5.0", optional = true }
static_cell = "2.1.0"
embassy-sync = "0.6.1"
embassy-net = { version = "0.5.0", features = [
    "dhcpv4",
    "dns",
    "proto-ipv4",
    "tcp",
    "udp",
] }
esp-wifi = { version = "0.11.0", optional = true, features = ["wifi"] }
rand = { version = "0.8.5", default-features = false }
esp-alloc = { version = "0.5.0", optional = true }
fugit = { version = "0.3.7", optional = true }
mcutie = "0.2.0"
embassy-futures = "0.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release.package.esp-wifi]
opt-level = 3

[patch.crates-io]
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", rev = "1f929af377e6713dce6ecf88fdd0ada4f696cebd" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "1f929af377e6713dce6ecf88fdd0ada4f696cebd" }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", rev = "1f929af377e6713dce6ecf88fdd0ada4f696cebd" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", rev = "1f929af377e6713dce6ecf88fdd0ada4f696cebd" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", rev = "1f929af377e6713dce6ecf88fdd0ada4f696cebd" }
